--- a/financialmarketsentimentanalysis.ipynb
+++ b/financialmarketsentimentanalysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN70jJKD5UgQv6KanfW6dCf",
+      "authorship_tag": "ABX9TyOJ3baaWZN3KX6c6KPgxGwb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "UPXzoWxKIFvQ"
       },
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "WaQGf-HPIfd4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "xQaSJdHUIfhA"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
         "id": "Ae5g6O0lIflZ",
         "outputId": "6e233b2c-f424-42bc-a0fb-3227f3d5156e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -600,7 +600,7 @@
         "id": "cZeJaIccIfoh",
         "outputId": "48d156e4-dbc1-4aaa-d525-449e160bcd63"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -656,7 +656,7 @@
         "id": "BswiJGKALZ9W",
         "outputId": "5a5b9ea1-bf36-4a23-d6b1-8524666304cc"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -682,7 +682,7 @@
         "id": "y63Nias8LYYS",
         "outputId": "bbc08e88-53a8-4598-f02f-eddcba51f232"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -714,7 +714,7 @@
         "id": "o92z8vnkIfxv",
         "outputId": "b601aede-015c-42aa-91f2-fe876e9bae9f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -743,7 +743,7 @@
         "id": "7r9Bzyz0MZnn",
         "outputId": "93f4934f-acf8-4e46-b7fc-d70be547c19d"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -769,7 +769,7 @@
         "id": "BWEdO8zfMZ4u",
         "outputId": "c6a4864d-65e5-4901-d82c-81a1e5de4759"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -793,7 +793,7 @@
       "metadata": {
         "id": "Ec0CJDLLMaI-"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -808,7 +808,7 @@
         "id": "SVKfI1ycMaTP",
         "outputId": "9dd13f95-46ea-4352-92fe-1c7c0b7da9f9"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -835,7 +835,7 @@
         "id": "p0HSte0NMaXf",
         "outputId": "8f748234-a353-4964-a00d-cf3f4e57afc2"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,10 +858,27 @@
         "x=news"
       ],
       "metadata": {
-        "id": "fGNiUqIKNxki"
+        "id": "fGNiUqIKNxki",
+        "outputId": "f83b23dd-b611-4592-920c-b54476c48cd6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
       },
-      "execution_count": 27,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'news' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-a0a03015db06>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnews\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'news' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -875,7 +892,7 @@
         "id": "J-FYu-mdNxnx",
         "outputId": "5bdaef12-4f6f-401a-93f8-71e8aa06b8a0"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -897,7 +914,7 @@
       "metadata": {
         "id": "XME3U5ojNxqn"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -908,7 +925,7 @@
       "metadata": {
         "id": "_aIU2pvMNxv1"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -919,7 +936,7 @@
       "metadata": {
         "id": "w4BOvKWxMabH"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -934,7 +951,7 @@
         "id": "eYGL3n-gOjBC",
         "outputId": "c61af3e3-563c-4d60-e0e1-baef858a5f3c"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -956,7 +973,7 @@
       "metadata": {
         "id": "xZYFoOVpOjOh"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -971,7 +988,7 @@
         "id": "3GH2nadiOtpH",
         "outputId": "11bde6bb-c26c-4b1a-81d3-337860d50942"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -993,7 +1010,7 @@
       "metadata": {
         "id": "Kk2TTtcQOttw"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1004,7 +1021,7 @@
       "metadata": {
         "id": "RtoRT3sVOtzl"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1015,7 +1032,7 @@
       "metadata": {
         "id": "seBZ-jUVOt3q"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1026,7 +1043,7 @@
       "metadata": {
         "id": "gb-VMD8jOt8N"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1042,7 +1059,7 @@
         "id": "ojYCyOIGOjW9",
         "outputId": "243981a1-735a-45ab-d26b-9ab6522b188b"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1067,7 +1084,7 @@
       "metadata": {
         "id": "4CnN28jMP2aA"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1078,7 +1095,7 @@
       "metadata": {
         "id": "lqkjKYriP2eV"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1093,7 +1110,7 @@
         "id": "BnzZaW-yP2h-",
         "outputId": "d9daaee2-febf-46a8-f672-87f2a149b40c"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1115,56 +1132,26 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 141
         },
         "id": "adBxd0EgP2lC",
-        "outputId": "728b8f28-a9e8-42a4-ba1b-b6142017a44b"
+        "outputId": "b46c3520-52d5-46ae-a817-e64f9f4947f2"
       },
-      "execution_count": 45,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.49      0.27      0.35       581\n",
-            "           1       0.53      0.75      0.62       650\n",
-            "\n",
-            "    accuracy                           0.52      1231\n",
-            "   macro avg       0.51      0.51      0.49      1231\n",
-            "weighted avg       0.51      0.52      0.49      1231\n",
-            "\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'classification_report' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-221bda6bfc4f>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassification_report\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'classification_report' is not defined"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "MUpMRkEOP2n8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "30YYRElJP2sF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "bxfIU55aP2vq"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
